--- a/style/header/_header.scss
+++ b/style/header/_header.scss
@@ -10,10 +10,15 @@
       .header__nav-list {
         display: flex;
         justify-content: space-evenly;
+        @media (max-width: $phone-l) {
+          justify-content: space-between;
+        }
         .header__nav-list-item {
           .header__nav-list-item-btn {
             max-width: 200px;
             width: 100%;
+            max-height: 80px;
+            height: 100%;
             padding: 15px;
             font-family: $font;
             font-size: 24px;
@@ -29,6 +34,16 @@
               transform: scale(1.1);
               background-color: $dark-blue-color;
               color: $active-text-color;
+            }
+            @media (max-width: $phone-l) {
+              max-width: 150px;
+              font-size: 18px;
+              line-height: 18px;
+            }
+            @media (max-width: $phone-m) {
+              max-width: 130px;
+              font-size: 16px;
+              line-height: 16px;
             }
           }
         }
