Added main js logic for getting data about weather in Minsk

--- a/style/glStyle/_templates.scss
+++ b/style/glStyle/_templates.scss
@@ -1,5 +1,19 @@
 @import "./vars";
 
+.active-btn {
+  color: $active-text-color !important;
+}
+
+// This class is needed to hide elements (by adding this class)
+.hidden-element {
+  display: none !important;
+}
+
+// This class is needed to make elements appear (by adding this class)
+.appeared-block {
+  display: block !important;
+}
+
 // Default settings of container for content (margin-bottom is possible)
 %default-container {
   max-width: 1920px;
