--- a/style/footer/_footer.scss
+++ b/style/footer/_footer.scss
@@ -10,9 +10,7 @@
     flex-direction: column;
     align-items: center;
     row-gap: 10px;
-    .footer__project-sign {
-      @include default-span(18px, 18px, $light-text-color);
-    }
+    .footer__project-sign,
     .footer__copyright-sign-year {
       @include default-span(18px, 18px, $light-text-color);
     }
