--- a/style/glStyle/glStyle.scss
+++ b/style/glStyle/glStyle.scss
@@ -10,6 +10,34 @@
   min-height: 100vh;
 }
 
+.loading-info-block {
+  text-align: center;
+  &__text-info {
+    width: 90%;
+    margin: 0 auto;
+    white-space: pre-line;
+    @include default-span(56px, 56px, $dark-text-color);
+    @media (max-width: $phone-l) {
+      font-size: 36px;
+      line-height: 36px;
+    }
+  }
+  &__spinner {
+    display: block;
+    margin: 0 auto;
+    width: 500px;
+    height: 500px;
+    @media (max-width: $tablet-s) {
+      width: 400px;
+      height: 400px;
+    }
+    @media (max-width: $phone-l) {
+      width: 300px;
+      height: 300px;
+    }
+  }
+}
+
 .weather-forecast-card {
   max-height: 100px;
   padding: 15px;
@@ -22,18 +50,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    .weather-forecast-card__date {
-      @include default-span(24px, 24px, $dark-text-color);
-      text-align: start;
-      @media (max-width: $phone-l) {
-        font-size: 18px;
-        line-height: 18px;
-      }
-      @media (max-width: $phone-m) {
-        font-size: 16px;
-        line-height: 16px;
-      }
-    }
+    .weather-forecast-card__date,
     .weather-forecast-card__time {
       @include default-span(24px, 24px, $dark-text-color);
       text-align: start;
@@ -42,8 +59,8 @@
         line-height: 18px;
       }
       @media (max-width: $phone-m) {
-        font-size: 16px;
-        line-height: 16px;
+        font-size: 14px;
+        line-height: 14px;
       }
     }
   }
